objects/DataDump__c.object
<CustomObject>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Data Dumps</relationshipLabel>
        <relationshipName>Data_Dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Data Dumps</relationshipLabel>
        <relationshipName>Data_Dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>dataString__c</fullName>
        <label>dataString</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fieldApiName__c</fullName>
        <label>fieldApiName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newValue__c</fullName>
        <label>newValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oldValue__c</fullName>
        <label>oldValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>quoteLine__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>quoteLine</label>
        <referenceTo>SBQQ__QuoteLine__c</referenceTo>
        <relationshipLabel>Data Dumps</relationshipLabel>
        <relationshipName>Data_Dumps</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DataDump</label>
    <nameField>
        <displayFormat>DD-{00000}</displayFormat>
        <label>DataDump Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Dumps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>